--- a/701-750.md
+++ b/701-750.md
@@ -1,3 +1,33 @@
+## [722. Remove Comments - Medium](https://leetcode.com/problems/remove-comments/)
+
+```python
+class Solution:
+  def removeComments(self, source: List[str]) -> List[str]:
+    ans, open_block, buffer = [], False, []
+    for line in source:
+      i = 0
+      while i < len(line):
+        if line[i] == '/' and i + 1 < len(line) and line[i+1] == '*' \
+            and not open_block:
+          open_block = True
+          i += 1
+        elif line[i] == '*' and i + 1 < len(line) and line[i+1] == '/' \
+            and open_block:
+          open_block = False
+          i += 1
+        elif not open_block and line[i] == '/' and i + 1 < len(line) \
+            and line[i+1] == '/':
+          break
+        elif not open_block:
+          buffer.append(line[i])
+        i += 1
+      if not open_block:
+        if buffer:
+          ans.append(''.join(buffer))
+        buffer = []
+    return ans
+```
+
 ## [727. Minimum Window Subsequence - Hard](https://leetcode.com/problems/minimum-window-subsequence/)
 
 ```python
