--- a/1001-1050.md
+++ b/1001-1050.md
@@ -1,3 +1,34 @@
+## [1031. Maximum Sum of Two Non-Overlapping Subarrays - Medium](https://leetcode.com/problems/maximum-sum-of-two-non-overlapping-subarrays/)
+
+```python
+class Solution:
+  def maxSumTwoNoOverlap(self, A: List[int], L: int, M: int) -> int:
+    for i in range(1, len(A)):
+      A[i] += A[i-1]
+    ans, Lmax, Mmax = A[L+M-1], A[L-1], A[M-1]
+    for i in range(L+M, len(A)):
+      Lmax = max(Lmax, A[i-M] - A[i-M-L])
+      Mmax = max(Mmax, A[i-L] - A[i-L-M])
+      ans = max(ans, Lmax + A[i] - A[i-M], Mmax + A[i] - A[i-L])
+    return ans
+```
+
+```python
+class Solution:
+  def maxSumTwoNoOverlap(self, A: List[int], L: int, M: int) -> int:
+    # accumulate
+    for i in range(1, len(A)):
+      A[i] += A[i-1]
+
+    def helper(prev_len, next_len):
+      res, pre_max = A[prev_len+next_len-1], A[prev_len-1]
+      for i in range(prev_len+next_len, len(A)):
+        pre_max = max(pre_max, A[i-next_len] - A[i-next_len-prev_len])
+        res = max(res, pre_max + A[i] - A[i-next_len])
+      return res
+    return max(helper(L, M), helper(M, L))
+```
+
 ## [1048. Longest String Chain - Medium](https://leetcode.com/problems/longest-string-chain/)
 
 ```python
