844. Backspace String Compare

--- a/801-850.md
+++ b/801-850.md
@@ -67,6 +67,22 @@ class Solution:
       wordlist = [w for w in wordlist if matchCount(w, guessing_word) == cnt]
 ```
 
+## [844. Backspace String Compare - Easy](https://leetcode.com/problems/backspace-string-compare/)
+
+```python
+class Solution:
+  def backspaceCompare(self, S: str, T: str) -> bool:
+    def shrink(s):
+      buf = []
+      for c in s:
+        if c != '#':
+          buf.append(c)
+        elif buf:
+          buf.pop()
+      return buf
+    return shrink(S) == shrink(T)
+```
+
 ## [846. Hand of Straights - Medium](https://leetcode.com/problems/hand-of-straights/)
 
 ```python
