1293. Shortest Path in a Grid with Obstacles ...

--- a/1251-1300.md
+++ b/1251-1300.md
@@ -1,3 +1,33 @@
+## [1293. Shortest Path in a Grid with Obstacles Elimination - Hard](https://leetcode.com/problems/shortest-path-in-a-grid-with-obstacles-elimination/)
+
+- Minimal steps -> BFS
+
+```python
+class Solution:
+  def shortestPath(self, grid: List[List[int]], k: int) -> int:
+    R, C = len(grid), len(grid[0])
+    q = [(0, 0, 0)]
+    visited = {(0, 0): 0}
+    step = 0
+    while q:
+      next_q = []
+      for r, c, obst in q:
+        if obst > k:
+          continue
+        if r == R - 1 and c == C - 1:
+          return step
+        for nr, nc in [(r+1, c), (r-1, c), (r, c+1), (r, c-1)]:
+          if 0 <= nr < R and 0 <= nc < C:
+            new_obst = obst + grid[nr][nc]
+            if new_obst < visited.get((nr, nc), float('inf')):
+              next_q.append((nr, nc, new_obst))
+              visited[(nr, nc)] = new_obst
+      q = next_q
+      step += 1
+    return -1
+```
+
+
 ## [1296. Divide Array in Sets of K Consecutive Numbers - Medium](https://leetcode.com/problems/divide-array-in-sets-of-k-consecutive-numbers/)
 
 ```python
