--- a/701-750.md
+++ b/701-750.md
@@ -55,3 +55,63 @@ class Solution:
       si += 1
     return '' if start == -1 else S[start:start+min_len+1]
 ```
+
+## [729. My Calendar I - Medium](https://leetcode.com/problems/my-calendar-i/)
+
+```python
+class MyCalendar:
+
+  def __init__(self):
+    self.slots = [(-2, -1), (float('inf'), float('inf'))]
+
+  def book(self, start: int, end: int) -> bool:
+    before_idx = self._bise_start(start)
+    before_end, after_start = self.slots[before_idx][1], self.slots[before_idx+1][0]
+    if start < before_end or end > after_start:
+      return False
+    self.slots.insert(before_idx+1, (start, end))
+    return True
+
+  def _bise_start(self, start: int) -> int:
+    l, r = 0, len(self.slots) - 1
+    while l < r:
+      mid = (l + r) // 2 + 1
+      if self.slots[mid][0] > start:
+        r = mid - 1
+      else:
+        l = mid
+    return l
+```
+
+```python
+class TreeNode:
+  def __init__(self, start, end):
+    self.start, self.end = start, end
+    self.left = self.right = None
+
+  def insert(self, node):
+    if self.end <= node.start:
+      if self.right == None:
+        self.right = node
+        return True
+      return self.right.insert(node)
+    elif self.start >= node.end:
+      if self.left == None:
+        self.left = node
+        return True
+      return self.left.insert(node)
+    return False
+
+
+class MyCalendar:
+
+  def __init__(self):
+    self.root = None
+
+  def book(self, start: int, end: int) -> bool:
+    node = TreeNode(start, end)
+    if not self.root:
+      self.root = node
+      return True
+    return self.root.insert(node)
+```
