--- a/1101-1150.md
+++ b/1101-1150.md
@@ -44,3 +44,40 @@ class Solution:
     traverse(root, True)
     return new_roots
 ```
+
+## [1146. Snapshot Array - Medium](https://leetcode.com/problems/snapshot-array/)
+
+```python
+class SnapshotArray:
+
+  def __init__(self, length: int):
+    self.snap_id = 0
+    self.memo = [[[0, 0]] for _ in range(length)]
+
+  def set(self, index: int, val: int) -> None:
+    if self.memo[index][-1][0] == self.snap_id:
+      self.memo[index][-1][1] = val
+    else:
+      self.memo[index].append([self.snap_id, val])
+
+  def snap(self) -> int:
+    self.snap_id += 1
+    return self.snap_id - 1
+
+  def get(self, index: int, snap_id: int) -> int:
+    arr = self.memo[index]
+    v = self._find_value(arr, snap_id)
+    return v
+
+  def _find_value(self, arr, snap_id):
+    l, r = 0, len(arr) - 1
+    while l < r:
+      mid = (l + r) // 2 + 1
+      if arr[mid][0] == snap_id:
+        return arr[mid][1]
+      elif arr[mid][0] > snap_id:
+        r = mid - 1
+      else:
+        l = mid
+    return arr[l][1]
+```
