752. Open the Lock

--- a/751-800.md
+++ b/751-800.md
@@ -1,3 +1,36 @@
+## [752. Open the Lock - Medium](https://leetcode.com/problems/open-the-lock/)
+
+```python
+class Solution:
+  def openLock(self, deadends: List[str], target: str) -> int:
+    q = ['0000']
+    visited, deadends = set(['0000']), set(deadends)
+    step = 0
+    while q:
+      next_q = []
+      for num in q:
+        if num in deadends:
+          continue
+        if num == target:
+          return step
+        for next_num in self.turn(num):
+          if next_num not in visited:
+            next_q.append(next_num)
+            visited.add(next_num)
+
+      q = next_q
+      step += 1
+    return -1
+
+  def turn(self, num):
+    l = [int(n) for n in num]
+    for i in range(4):
+      c = l[i]
+      for d in [-1, 1]:
+        n = str((c + d) % 10)
+        yield num[:i] + n + num[i+1:]
+```
+
 ## [763. Partition Labels - Medium](https://leetcode.com/problems/partition-labels/)
 
 ```python
