337. House Robber III

--- a/301-350.md
+++ b/301-350.md
@@ -109,3 +109,20 @@ class Solution:
         ans.append(stack.pop())
     return ans[::-1]
 ```
+
+## [337. House Robber III - Medium](https://leetcode.com/problems/house-robber-iii/)
+
+```python
+class Solution:
+  def rob(self, root: TreeNode) -> int:
+    def traverse(node):
+      if not node:
+        return [0, 0]
+      left = traverse(node.left)
+      right = traverse(node.right)
+      return [
+        max(node.val + left[1] + right[1], left[0] + right[0]),
+        left[0] + right[0]
+      ]
+    return traverse(root)[0]
+```
