213. House Robber II

--- a/201-250.md
+++ b/201-250.md
@@ -61,6 +61,24 @@ class Solution:
     return self.order
 ```
 
+## [213. House Robber II - Medium](https://leetcode.com/problems/house-robber-ii/)
+
+```python
+class Solution:
+  def rob(self, nums: List[int]) -> int:
+    if not nums: return 0
+
+    def helper(l):
+      if not l: return 0
+      elif len(l) == 1: return l[0]
+      l[1] = max(l[:2])
+      for i in range(2, len(l)):
+        l[i] = max(l[i] + l[i-2], l[i-1])
+      return l[-1]
+
+    return max(helper(nums[:-1]), helper([nums[-1]]+nums[:-2]))
+```
+
 ## [215. Kth Largest Element in an Array - Medium](https://leetcode.com/problems/kth-largest-element-in-an-array/)
 
 ```python
