375. Guess Number Higher or Lower II

--- a/351-400.md
+++ b/351-400.md
@@ -51,6 +51,23 @@ class Logger:
     return False
 ```
 
+```python
+class Solution:
+  def getMoneyAmount(self, n: int) -> int:
+    memo = [[float('inf')] * (n+1) for _ in range(n+1)]
+
+    def dfs(lo, hi):
+      if hi <= lo:
+        return 0
+      elif memo[lo][hi] != float('inf'):
+        return memo[lo][hi]
+      for i in range(lo, hi+1):
+        memo[lo][hi] = min(memo[lo][hi], i + max(dfs(lo, i-1), dfs(i+1, hi)))
+      return memo[lo][hi]
+
+    return dfs(1, n)
+```
+
 ## [394. Decode String - Medium](https://leetcode.com/problems/decode-string/)
 
 ```python
