1576. Replace All ?'s to Avoid Consecutive ...

--- a/1551-1600.md
+++ b/1551-1600.md
@@ -130,3 +130,20 @@ class Solution:
       return (comb(len(left)+len(right), len(left)) * f(left) * f(right)) % M
     return f(nums) - 1
 ```
+
+## [1576. Replace All ?'s to Avoid Consecutive Repeating Characters - Easy](https://leetcode.com/problems/replace-all-s-to-avoid-consecutive-repeating-characters/)
+
+- Check head and tail with `or`
+
+```python
+class Solution:
+  def modifyString(self, s: str) -> str:
+    s = list(s)
+    for i, c in enumerate(s):
+      if c == '?':
+        for p in 'abc':
+          if (i == 0 or s[i-1] != p) and (i == len(s)-1 or s[i+1] != p):
+            s[i] = p
+            break
+    return ''.join(s)
+```
