1577. Number of Ways Where Square of Number Is ...

--- a/1551-1600.md
+++ b/1551-1600.md
@@ -147,3 +147,29 @@ class Solution:
             break
     return ''.join(s)
 ```
+
+## [1577. Number of Ways Where Square of Number Is Equal to Product of Two Numbers - Medium](https://leetcode.com/problems/number-of-ways-where-square-of-number-is-equal-to-product-of-two-numbers/)
+
+```python
+from collections import Counter
+
+class Solution:
+  def numTriplets(self, nums1: List[int], nums2: List[int]) -> int:
+    def helper(count1, count2):
+      res = 0
+      for n1, cnt1 in count1.items():
+        sqr = n1*n1
+        used = set()
+        for n2, cnt2 in count2.items():
+          if n2 * n2 == sqr:
+            res += cnt1 * ((cnt2 * (cnt2 - 1)) // 2)
+          else:
+            other = sqr / n2
+            if other in count2 and other not in used:
+              res += cnt1 * cnt2 * count2[other]
+          used.add(n2)
+      return res
+
+    counter1 = Counter(nums1); counter2 = Counter(nums2)
+    return helper(counter1, counter2) + helper(counter2, counter1)
+```
