1578. Minimum Deletion Cost to Avoid Repeating ...

--- a/1551-1600.md
+++ b/1551-1600.md
@@ -173,3 +173,19 @@ class Solution:
     counter1 = Counter(nums1); counter2 = Counter(nums2)
     return helper(counter1, counter2) + helper(counter2, counter1)
 ```
+
+## [1578. Minimum Deletion Cost to Avoid Repeating Letters - Medium](https://leetcode.com/problems/minimum-deletion-cost-to-avoid-repeating-letters/)
+
+```python
+# greedy
+class Solution:
+  def minCost(self, s: str, cost: List[int]) -> int:
+    ans, last_c, last_cost = 0, s[0], cost[0]
+    for i, c in enumerate(s[1:], 1):
+      if c == last_c:
+        ans += min(cost[i], last_cost)
+        last_cost = max(cost[i], last_cost)
+      else:
+        last_c, last_cost = c, cost[i]
+    return ans
+```
