--- a/951-1000.md
+++ b/951-1000.md
@@ -1,3 +1,19 @@
+## [951. Flip Equivalent Binary Trees - Medium](https://leetcode.com/problems/flip-equivalent-binary-trees/)
+
+```python
+class Solution:
+  def flipEquiv(self, root1: TreeNode, root2: TreeNode) -> bool:
+    if root1 and root2:
+      if root1.val != root2.val:
+        return False
+      flip = self.flipEquiv(root1.left, root2.right) and \
+          self.flipEquiv(root1.right, root2.left)
+      not_flip = self.flipEquiv(root1.left, root2.left) and \
+          self.flipEquiv(root1.right, root2.right)
+      return flip or not_flip
+    return root1 is None and root2 is None
+```
+
 ## [959. Regions Cut By Slashes - Medium](https://leetcode.com/problems/regions-cut-by-slashes/)
 
 ```python
