--- a/51-100.md
+++ b/51-100.md
@@ -84,6 +84,39 @@ class Solution:
     return ans
 ```
 
+## [79. Word Search - Medium](https://leetcode.com/problems/word-search/)
+
+```python
+class Solution:
+  dirs = [[1, 0], [-1, 0], [0, 1], [0, -1]]
+
+  def exist(self, board: List[List[str]], word: str) -> bool:
+    if not board or not board[0]:
+      return False
+    R, C = len(board), len(board[0])
+    L = len(word)
+
+    def dfs(r, c, i):
+      if i == L:
+        return True
+      if r < 0 or r >= R or c < 0 or c >= C or board[r][c] != word[i]:
+        return False
+      tmp = word[i]
+      board[r][c] = '*'  # avoid visit again
+      for dr, dc in self.dirs:
+        nr, nc = r + dr, c + dc  # next coordinate
+        if dfs(nr, nc, i+1):
+          return True
+      board[r][c] = tmp
+      return False
+
+    for r in range(R):
+      for c in range(C):
+        if dfs(r, c, 0):
+          return True
+    return False
+```
+
 ## [85. Maximal Rectangle - Hard](https://leetcode.com/problems/maximal-rectangle/)
 
 ```python
