--- a/1551-1600.md
+++ b/1551-1600.md
@@ -189,3 +189,42 @@ class Solution:
         last_c, last_cost = c, cost[i]
     return ans
 ```
+
+## [1579. Remove Max Number of Edges to Keep Graph Fully Traversable - Hard](https://leetcode.com/problems/remove-max-number-of-edges-to-keep-graph-fully-traversable/)
+
+```python
+class Solution:
+  def maxNumEdgesToRemove(self, n: int, edges: List[List[int]]) -> int:
+    def union(m, n, arr):
+      if m > n: m, n = n, m
+      m, n = find(m, arr), find(n, arr)
+      if m == n: return False
+      arr[n] = m
+      return True
+
+    def find(m, arr):
+      if m != arr[m]:
+        arr[m] = find(arr[m], arr)
+      return arr[m]
+
+    arr = list(range(n+1))
+    ab = [0, 0, 0]  # connected nodes for alice and bob. ab[0] is redundant
+    ans = 0  # cnt of redundant edges
+    for ty, i, j in edges:
+      if ty == 3:
+        if union(i, j, arr):
+          ab[1] += 1; ab[2] += 1
+        else:
+          ans += 1
+
+    arrs = [0, arr, arr[:]]
+    for ty, i, j in edges:
+      if ty == 3:
+        continue
+      if union(i, j, arrs[ty]):
+        ab[ty] += 1
+      else:
+        ans += 1
+
+    return ans if ab[1] == ab[2] == n-1 else -1
+```
