--- a/751-800.md
+++ b/751-800.md
@@ -126,3 +126,42 @@ class Solution:
             return False
     return True
 ```
+
+## [792. Number of Matching Subsequences - Medium](https://leetcode.com/problems/number-of-matching-subsequences/)
+
+- `next(it, None)`
+
+```python
+# TLE
+class Solution:
+  def numMatchingSubseq(self, S: str, words: List[str]) -> int:
+
+    def isSub(parent, sub):
+      i = j = 0
+      while i < len(parent) and j < len(sub):
+        if parent[i] == sub[j]:
+          i += 1; j+= 1
+        else:
+          i += 1
+      return j == len(sub)
+
+    return sum([isSub(S, w) for w in words])
+```
+
+```python
+from collections import defaultdict
+
+class Solution:
+  def numMatchingSubseq(self, S: str, words: List[str]) -> int:
+    word_map = defaultdict(list)
+    for w in words:
+      it = iter(w)
+      word_map[next(it)].append(it)
+
+    for c in S:
+      tmp = word_map[c]
+      word_map[c] = []
+      for it in tmp:
+        word_map[next(it, None)].append(it)
+    return len(word_map[None])
+```
