--- a/101-150.md
+++ b/101-150.md
@@ -258,3 +258,27 @@ class Solution:
       stack.append(cur.right)
     return ans[::-1]
 ```
+
+## [148. Sort List - Medium](https://leetcode.com/problems/sort-list/)
+
+```python
+class Solution:
+  def sortList(self, head: ListNode) -> ListNode:
+    if not head or not head.next:
+      return head
+    slow, fast =  head, head.next
+    while fast and fast.next:
+      slow, fast = slow.next, fast.next.next
+    p2 = slow.next
+    slow.next = None
+    return self.merge(self.sortList(head), self.sortList(p2))
+
+
+  def merge(self, p1, p2):  # merge two sorted list
+    dummy = cur = ListNode(-1)
+    while p1 and p2:
+      if p1.val > p2.val: p1, p2 = p2, p1  # p1 is the smaller one
+      cur.next, p1, cur = p1, p1.next, p1
+    cur.next = p1 or p2
+    return dummy.next
+```
