--- a/1101-1150.md
+++ b/1101-1150.md
@@ -45,6 +45,26 @@ class Solution:
     return new_roots
 ```
 
+## [1140. Stone Game II - Medium](https://leetcode.com/problems/stone-game-ii/)
+
+```python
+from functools import lru_cache
+
+class Solution:
+  def stoneGameII(self, piles: List[int]) -> int:
+    LEN = len(piles)
+    for i in range(LEN-1)[::-1]:
+      piles[i] += piles[i+1]
+
+    @lru_cache(None)
+    def dfs(i, m):
+      if i + 2*m >= LEN:
+        return piles[i]
+      return piles[i] - min([dfs(i+j, max(j, m)) for j in range(1, 2*m+1)])
+
+    return dfs(0, 1)
+```
+
 ## [1146. Snapshot Array - Medium](https://leetcode.com/problems/snapshot-array/)
 
 ```python
