--- a/851-900.md
+++ b/851-900.md
@@ -33,6 +33,34 @@ class Solution:
     return [node.val for node in q]
 ```
 
+## [877. Stone Game - Medium](https://leetcode.com/problems/stone-game/)
+
+Example:
+
+2,8,3,4,3
+
+|    | 0  (2)       | 1  (8)       | 2  (3)       | 3  (4)       | 4  (3)       |
+|----|--------------|--------------|--------------|--------------|--------------|
+| 0  | dp(0,0) = 2  | dp(0,1) = 6  | dp(0,2) = -3 | dp(0,3) = 7  | dp(0,4) = -4 |
+| 1  |              | dp(1,1) = 8  | dp(1,2) = 5  | dp(1,3) = 7  | dp(1,4) = 6  |
+| 2  |              |              | dp(2,2) = 3  | dp(2,3) = 1  | dp(2,4) = 2  |
+| 3  |              |              |              | dp(3,3) = 4  | dp(3,4) = 1  |
+| 4  |              |              |              |              | dp(4,4) = 3  |
+
+```python
+class Solution:
+  def stoneGame(self, piles: List[int]) -> bool:
+    LEN = len(piles)
+    dp = [[0] * LEN for _ in range(LEN)]
+    for i in range(LEN):
+      dp[i][i] = piles[i]
+
+    for c in range(1, LEN):
+      for r in range(c)[::-1]:
+        dp[r][c] = max(piles[c]-dp[r][c-1], piles[r]-dp[r+1][c])
+    return dp[0][-1] > 0
+```
+
 ## [886. Possible Bipartition - Medium](https://leetcode.com/problems/possible-bipartition/)
 
 ```python
