652. Find Duplicate Subtrees

--- a/651-700.md
+++ b/651-700.md
@@ -1,3 +1,54 @@
+## [652. Find Duplicate Subtrees - Medium](https://leetcode.com/problems/find-duplicate-subtrees/)
+
+```python
+# Brute force, TLE
+from collections import defaultdict
+
+class Solution:
+  def findDuplicateSubtrees(self, root: TreeNode) -> List[TreeNode]:
+    mapping = defaultdict(list)
+    ans = set()
+    def traverse(node):
+      if not node:
+        return
+      same_val_nodes = mapping[node.val]
+      for n in same_val_nodes:
+        if isSame(n, node):
+          ans.add(n)
+          break
+      else:
+        mapping[node.val].append(node)
+
+      traverse(node.left)
+      traverse(node.right)
+
+    def isSame(node1, node2):
+      if node1 and node2:
+        if node1.val != node2.val:
+          return False
+        return isSame(node1.left, node2.left) and isSame(node1.right, node2.right)
+      return node1 is None and node2 is None
+
+    traverse(root)
+    return list(ans)
+```
+
+```python
+from collections import defaultdict
+
+class Solution:
+  def findDuplicateSubtrees(self, root: TreeNode) -> List[TreeNode]:
+    mapping = defaultdict(list)
+    def traverse(node):
+      if not node: return '#'
+      s = f'{node.val},{traverse(node.left)},{traverse(node.right)}'
+      mapping[s].append(node)
+      return s
+
+    traverse(root)
+    return [mapping[k][0] for k, v in mapping.items() if len(v) > 1]
+```
+
 ## [659. Split Array into Consecutive Subsequences - Medium](https://leetcode.com/problems/split-array-into-consecutive-subsequences/)
 
 ```python
