833. Find And Replace in String

--- a/801-850.md
+++ b/801-850.md
@@ -29,6 +29,18 @@ class Solution:
     return j - idx
 ```
 
+## [833. Find And Replace in String - Medium](https://leetcode.com/problems/find-and-replace-in-string/)
+
+```python
+class Solution:
+  def findReplaceString(self, S: str, indexes: List[int], sources: List[str], targets: List[str]) -> str:
+    origin = list(S)
+    for i, s, t in sorted(zip(indexes, sources, targets), reverse=True):
+      if ''.join(origin[i:i+len(s)]) == s:
+        origin[i:i+len(s)] = list(t)
+    return ''.join(origin)
+```
+
 ## [843. Guess the Word - Hard](https://leetcode.com/problems/guess-the-word/)
 
 ```python
