--- a/351-400.md
+++ b/351-400.md
@@ -51,6 +51,8 @@ class Logger:
     return False
 ```
 
+## [375. Guess Number Higher or Lower II - Medium](https://leetcode.com/problems/guess-number-higher-or-lower-ii/)
+
 ```python
 class Solution:
   def getMoneyAmount(self, n: int) -> int:
