241. Different Ways to Add Parentheses

--- a/201-250.md
+++ b/201-250.md
@@ -353,3 +353,34 @@ class Solution:
         ans.append(nums[q[0]])
     return ans
 ```
+
+## [241. Different Ways to Add Parentheses - Medium](https://leetcode.com/problems/different-ways-to-add-parentheses/)
+
+```python
+import operator
+
+class Solution:
+  ops = {'+': operator.add, '-': operator.sub, '*': operator.mul}
+
+  def diffWaysToCompute(self, input: str) -> List[int]:
+    memo = {}
+    def helper(s):
+      if not s:
+        return [0]
+      elif s in memo:
+        return memo[s]
+      elif s.isdigit():
+        return [int(s)]
+      res = []
+      for i, c in enumerate(s):
+        if c in self.ops:
+          left = helper(s[:i])
+          right = helper(s[i+1:])
+          for l in left:
+            for r in right:
+              res.append(self.ops[c](l, r))
+      memo[s] = res
+      return memo[s]
+
+    return helper(input)
+```
