1582. Special Positions in a Binary Matrix

--- a/1551-1600.md
+++ b/1551-1600.md
@@ -228,3 +228,27 @@ class Solution:
 
     return ans if ab[1] == ab[2] == n-1 else -1
 ```
+
+## [1582. Special Positions in a Binary Matrix - Easy](https://leetcode.com/problems/special-positions-in-a-binary-matrix/)
+
+```python
+from collections import defaultdict
+
+class Solution:
+  def numSpecial(self, mat: List[List[int]]) -> int:
+    row_counter = defaultdict(int)
+    col_counter = defaultdict(int)
+    cols = defaultdict(list)  # key: row idx, value: col idx in this row.
+    for r in range(len(mat)):
+      for c in range(len(mat[0])):
+        if mat[r][c] == 1:
+          row_counter[r] += 1
+          col_counter[c] += 1
+          cols[r].append(c)
+    ans = 0
+    for col in cols.values():
+      if len(col) == 1 and col_counter[col[0]] == 1:
+        ans += 1
+
+    return ans
+```
