1583. Count Unhappy Friends

--- a/1551-1600.md
+++ b/1551-1600.md
@@ -252,3 +252,33 @@ class Solution:
 
     return ans
 ```
+
+## [1583. Count Unhappy Friends - Medium](https://leetcode.com/problems/count-unhappy-friends/)
+
+```python
+class Solution:
+  def unhappyFriends(self, n: int, preferences: List[List[int]], pairs: List[List[int]]) -> int:
+    dic = {}
+    for p1, p2 in pairs:
+      dic[p1] = p2
+      dic[p2] = p1
+
+    def isUnHappy(better, i):
+      for bp in better:
+        paired = dic[bp]
+        for p in preferences[bp]:
+          if p == paired:
+            break
+          if p == i:
+            return True
+      return False
+
+    ans = 0
+    for i in range(n):
+      paired = dic[i]
+      paired_idx = preferences[i].index(paired)
+      better = preferences[i][:paired_idx]
+      if isUnHappy(better, i):
+        ans += 1
+    return ans
+```
