23. Merge k Sorted Lists

--- a/1-50.md
+++ b/1-50.md
@@ -130,6 +130,27 @@ class Solution:
     return ans
 ```
 
+## [23. Merge k Sorted Lists - Hard](https://leetcode.com/problems/merge-k-sorted-lists/)
+
+```python
+import heapq
+
+class Solution:
+  def mergeKLists(self, lists: List[ListNode]) -> ListNode:
+    h = []
+    dummy = cur = ListNode(-1)
+    for i, node in enumerate(lists):
+      if node:
+        heapq.heappush(h, (node.val, i, node))
+
+    while h:
+      val, i, node = heapq.heappop(h)
+      cur.next, cur, node = node, node, node.next
+      if node:
+        heapq.heappush(h, (node.val, i, node))
+    return dummy.next
+```
+
 ## [29. Divide Two Integers - Medium](https://leetcode.com/problems/divide-two-integers/)
 
 ```python
