953. Verifying an Alien Dictionary

--- a/951-1000.md
+++ b/951-1000.md
@@ -14,6 +14,27 @@ class Solution:
     return root1 is None and root2 is None
 ```
 
+## [953. Verifying an Alien Dictionary - Easy](https://leetcode.com/problems/verifying-an-alien-dictionary/)
+
+```python
+class Solution:
+  def isAlienSorted(self, words: List[str], order: str) -> bool:
+    char_order = {}
+    for i, c in enumerate(order):
+      char_order[c] = i
+
+    for before, after in zip(words, words[1:]):
+      for i in range(min(len(before), len(after))):
+        if before[i] != after[i]:
+          if char_order[before[i]] > char_order[after[i]]:
+            return False
+          break
+      else:
+        if len(before) > len(after):
+          return False
+    return True
+```
+
 ## [959. Regions Cut By Slashes - Medium](https://leetcode.com/problems/regions-cut-by-slashes/)
 
 ```python
