--- a/401-450.md
+++ b/401-450.md
@@ -1,3 +1,25 @@
+## [415. Add Strings - Easy](https://leetcode.com/problems/add-strings/)
+
+```python
+class Solution:
+  def addStrings(self, num1: str, num2: str) -> str:
+    slots = []
+    i, j = len(num1) - 1, len(num2) - 1
+    carry = 0
+    while i >= 0 or j >= 0 or carry:
+      d1 = d2 = 0
+      if i >= 0:
+        d1 = int(num1[i])
+        i -= 1
+      if j >= 0:
+        d2 = int(num2[j])
+        j -= 1
+
+      carry, v = divmod(carry+d1+d2, 10)
+      slots.append(str(v))
+    return ''.join(slots[::-1])
+```
+
 ## [444. Sequence Reconstruction - Medium](https://leetcode.com/problems/sequence-reconstruction/)
 
 ```python
