--- a/1-50.md
+++ b/1-50.md
@@ -331,3 +331,50 @@ class Solution:
     helper(0, 0, [])
     return ans
 ```
+
+## [42. Trapping Rain Water - Hard](https://leetcode.com/problems/trapping-rain-water/)
+
+```python
+class Solution:
+  def trap(self, height: List[int]) -> int:
+    if len(height) < 3:
+      return 0
+    L = len(height)
+    look_left, look_right = [0] * L, [0] * L
+    left_max = 0
+    for i, v in enumerate(height):
+      look_left[i] = left_max
+      left_max = max(left_max, v)
+    right_max = 0
+    for i in range(L)[::-1]:
+      look_right[i] = right_max
+      right_max = max(right_max, height[i])
+
+    ans = 0
+    for i in range(L):
+      min_height = min(look_left[i], look_right[i])
+      ans = max(0, min_height - height[i])
+    return ans
+```
+
+```python
+class Solution:
+  def trap(self, height: List[int]) -> int:
+    l, r = 0, len(height) - 1
+    left_max = right_max = 0
+    ans = 0
+    while l < r:
+      if height[l] < height[r]:
+        if height[l] < left_max:
+          ans += left_max - height[l]
+        else:
+          left_max = height[l]
+        l += 1
+      else:
+        if height[r] < right_max:
+          ans += right_max - height[r]
+        else:
+          right_max = height[r]
+        r -= 1
+    return ans
+```
