407. Trapping Rain Water II

--- a/401-450.md
+++ b/401-450.md
@@ -1,3 +1,42 @@
+## [407. Trapping Rain Water II - Hard](https://leetcode.com/problems/trapping-rain-water-ii/)
+
+```python
+import heapq
+
+class Solution:
+  dirs = [(1, 0), (-1, 0), (0, 1), (0, -1)]
+
+  def trapRainWater(self, heightMap: List[List[int]]) -> int:
+    if not heightMap or not heightMap[0]:
+      return 0
+    R, C = len(heightMap), len(heightMap[0])
+    h = []
+    seen = set()
+    for r in range(R):
+      if r in (0, R-1):
+        c_range = range(C)
+      else:
+        c_range = [0, C-1]
+
+      for c in c_range:
+        heapq.heappush(h, (heightMap[r][c], r, c))
+        seen.add((r, c))
+
+    ans = 0
+    while h:
+      height, r, c = heapq.heappop(h)
+      for dr, dc in self.dirs:
+        nr, nc = r + dr, c + dc
+        if 0 <= nr < R and 0 <= nc < C and (nr, nc) not in seen:
+          if heightMap[nr][nc] < height:
+            ans += height - heightMap[nr][nc]
+            heapq.heappush(h, (height, nr, nc))
+          else:
+            heapq.heappush(h, (heightMap[nr][nc], nr, nc))
+          seen.add((nr, nc))
+    return ans
+```
+
 ## [415. Add Strings - Easy](https://leetcode.com/problems/add-strings/)
 
 ```python
