--- a/401-450.md
+++ b/401-450.md
@@ -1,3 +1,25 @@
+## [403. Frog Jump - Hard](https://leetcode.com/problems/frog-jump/)
+
+```python
+class Solution:
+  def canCross(self, stones: List[int]) -> bool:
+    if stones[1] != 1:
+      return False
+    last_jump = {s: set() for s in stones}
+    last_jump[1].add(1)
+    for s in stones[1:]:
+      if not last_jump[s]:
+        continue
+      for k in last_jump[s]:
+        for step in [k-1, k, k+1]:
+          if step == 0:
+            continue
+          next_stone = s + step
+          if next_stone in last_jump:
+            last_jump[next_stone].add(step)
+    return len(last_jump[stones[-1]]) > 0
+```
+
 ## [407. Trapping Rain Water II - Hard](https://leetcode.com/problems/trapping-rain-water-ii/)
 
 ```python
