465. Optimal Account Balancing

--- a/451-500.md
+++ b/451-500.md
@@ -1,3 +1,39 @@
+## [465. Optimal Account Balancing - Hard](https://leetcode.com/problems/optimal-account-balancing/)
+
+```python
+from collections import defaultdict
+
+class Solution:
+  def minTransfers(self, transactions: List[List[int]]) -> int:
+    balance = defaultdict(int)
+    for fr, to, val in transactions:
+      balance[fr] += val  # people give out some money
+      balance[to] -= val  # people owe some money
+    bals = [v for v in sorted(balance.values()) if v != 0]
+
+    def dfs(b):
+      if not b:
+        return 0
+      for i, val in enumerate(b[:-1]):
+        # greedy
+        if val == -b[-1]:
+          return 1 + dfs(b[:i] + b[i+1:-1])
+        elif val > 0:
+          break
+      res = []
+      for i, val in enumerate(b[:-1]):
+        if val > 0:
+          break
+        val = -val
+        if val > b[-1]:
+          res.append(dfs([b[-1]-val] + b[:i] + b[i+1:-1]))
+        else:
+          res.append(dfs(b[:i] + b[i+1:-1] + [b[-1] - val]))
+      return 1 + min(res)
+
+    return dfs(bals)
+```
+
 ## [484. Find Permutation - Medium](https://leetcode.com/problems/find-permutation/)
 
 ```python
