1592. Rearrange Spaces Between Words

--- a/1551-1600.md
+++ b/1551-1600.md
@@ -313,3 +313,20 @@ class Solution:
       ans += cost
     return ans
 ```
+
+## [1592. Rearrange Spaces Between Words - Easy](https://leetcode.com/problems/rearrange-spaces-between-words/)
+
+```python
+from collections import Counter
+
+class Solution:
+  def reorderSpaces(self, text: str) -> str:
+    c = Counter(text)
+    words = text.split()
+    space_cnt = c[' ']
+    if len(words) == 1:
+      return words[0] + ' ' * space_cnt
+    between, tail = divmod(c[' '], len(words)-1)
+    res = (' ' * between).join(words) + ' ' * tail
+    return res
+```
