1593. Split a String Into the Max Number of ...

--- a/1551-1600.md
+++ b/1551-1600.md
@@ -330,3 +330,25 @@ class Solution:
     res = (' ' * between).join(words) + ' ' * tail
     return res
 ```
+
+## [1593. Split a String Into the Max Number of Unique Substrings - Medium](https://leetcode.com/problems/split-a-string-into-the-max-number-of-unique-substrings/)
+
+```python
+class Solution:
+  def maxUniqueSplit(self, s: str) -> int:
+    def dfs(rest, seen):
+      if not rest:
+        return 0
+
+      cnt = 0
+      for i in range(1, len(rest)+1):
+        sub = rest[:i]
+        if sub in seen:
+          continue
+        seen.add(sub)
+        cnt = max(cnt, dfs(rest[i:], seen)+1)
+        seen.remove(sub)
+      return cnt
+
+    return dfs(s, set())
+```
