1594. Maximum Non Negative Product in a Matrix

--- a/1551-1600.md
+++ b/1551-1600.md
@@ -352,3 +352,31 @@ class Solution:
 
     return dfs(s, set())
 ```
+
+## [1594. Maximum Non Negative Product in a Matrix - Medium](https://leetcode.com/problems/maximum-non-negative-product-in-a-matrix/)
+
+```python
+class Solution:
+  def maxProductPath(self, grid: List[List[int]]) -> int:
+    R, C = len(grid), len(grid[0])
+    dp = [[[0, 0] for _ in range(C)]  for _ in range(R)]  # [max, min]
+    for r in range(R):
+      for c in range(C):
+        v = grid[r][c]
+        if r == 0 and c == 0:
+          dp[r][c] = [grid[r][c], grid[r][c]]
+          continue
+        elif r == 0:
+          vals = [dp[r][c-1][0] * v, dp[r][c-1][1] * v]
+        elif c == 0:
+          vals = [dp[r-1][c][0] * v, dp[r-1][c][1] * v]
+        else:
+          vals = [dp[r-1][c][0] * v, dp[r-1][c][1] * v,
+              dp[r][c-1][0] * v, dp[r][c-1][1] * v]
+        dp[r][c][0] = max(vals)
+        dp[r][c][1] = min(vals)
+    ans = dp[-1][-1][0]
+    if ans < 0:
+      return -1
+    return ans % (10**9 + 7)
+```
