110. Balanced Binary Tree

--- a/101-150.md
+++ b/101-150.md
@@ -35,6 +35,43 @@ class Solution:
     return helper(postorder, inorder)
 ```
 
+## [110. Balanced Binary Tree - Easy](https://leetcode.com/problems/balanced-binary-tree/)
+
+```python
+class Solution:
+  def isBalanced(self, root: TreeNode) -> bool:
+    def height(node: TreeNode):
+      if not node:
+        return 0
+      left = height(node.left)
+      right = height(node.right)
+      diff = abs(left - right)
+      if left == -1 or right == -1 or diff > 1:
+        return -1
+      return max(left, right) + 1
+
+    return height(root) != -1
+```
+
+```go
+import "math"
+
+func isBalanced(root *TreeNode) bool {
+  return height(root) != -1.0
+}
+
+func height(root *TreeNode) float64 {
+  if root == nil { return 0 }
+  left := height(root.Left)
+  right := height(root.Right)
+  diff := math.Abs(left - right)
+  if left == -1.0 || right == -1.0 || diff > 1 {
+    return -1.0
+  }
+  return math.Max(left, right) + 1
+}
+```
+
 ## [117. Populating Next Right Pointers in Each Node II - Medium](https://leetcode.com/problems/populating-next-right-pointers-in-each-node-ii/)
 
 ```python
